--- a/M2/build.gradle
+++ b/M2/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 jar {
     manifest {
         attributes 'Main-Class': 'edu.gatech.oad.antlab.pkg1.AntLabMain',
-                   'Class-Path': 'resources.jar'
+                   'Class-Path': 'lib/resources.jar'
     }
+    destinationDir = file('.')
 }
